# ATLAS

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
apps/: CMakeLists.txt
apps/livox_probe/: atlas_livox_probe.cpp
config/livox/: mid360.json
core/: CMakeLists.txt
core/src/: atlas_dummy.cpp
docs/: MANIFIESTO.md
include/atlas/: atlas.hpp
include/atlas/io/: IGnssSource.hpp
modules/livox/: CMakeLists.txt
modules/livox/gnss/src/: NmeaSerialReader.cpp
modules/livox/include/atlas/livox/: LivoxSource.hpp
modules/livox/src/: LivoxSource.cpp
